# lab_oop_2

./: CMakeLists.txt  README.md
Google_Tests/: CMakeLists.txt  twelve_tests.cpp
include/: twelve.h
src/: CMakeLists.txt  main.cpp  twelve.cpp
